Agregada la frase en index y el icono de wsp

--- a/languages/en.json
+++ b/languages/en.json
@@ -33,7 +33,7 @@
         "servicio3": "Soil laboratory",
         "servicio4": "Drilling",
         "titulo-nosotros": "SOBRE NOSOTROS",
-        "texto-nosotros": "We specialize in the planning and execution of soil studies of various scales, supported by a multidisciplinary team that ensures excellence in the quality of our work.",
+        "texto-nosotros": "Twenty years of experience and our project portfolio supports the quality of our work and the strategic value we generate for each of our clients' projects.",
         "titulo-proyectos": "OUR PROJECTS"
     },
     "estudios-geotecnicos":{
