--- a/languages/es.json
+++ b/languages/es.json
@@ -33,7 +33,7 @@
         "servicio3": "Laboratorio de suelos",
         "servicio4": "Perforación",
         "titulo-nosotros": "SOBRE NOSOTROS",
-        "texto-nosotros": "Nos especializamos en la planificación y ejecución de estudios de suelos de diversas escalas, respaldados por un equipo multidisciplinario que asegura la excelencia en la calidad de nuestro trabajo.",
+        "texto-nosotros": "Veinte años de experiencia y nuestro portafolio de proyectos respalda la calidad de nuestro trabajo y el valor estratégico que generamos a cada proyecto de nuestros clientes.",
         "titulo-proyectos": "PROYECTOS"
     },
     "estudios-geotecnicos": {
