--- a/languages/es.json
+++ b/languages/es.json
@@ -74,7 +74,7 @@
         "martillo-suizo-desc":" El martillo suizo, o esclerómetro, se utiliza para medir la dureza superficial del concreto.<br><br><b>Procedimiento:</b><br> El martillo suizo se golpea contra la superficie del concreto, y la energía del rebote se mide para estimar la dureza superficial. Se utiliza para evaluar la calidad del concreto y detectar posibles problemas como la carbonatación.",
         
         "extraccion-nucleos":"Extracción de núcleos",
-        "extraccion-nucleos-desc":"La extracción de núcleos la utilizamos para obtener muestras del concreto en estructuras existentes y evaluar su resistencia y condiciones internas.<br><br><b>Procedimiento: </b>Se perfora un núcleo del concreto utilizando una herramienta especial, y la muestra resultante se utiliza para realizar pruebas de resistencia a la compresión y analizar la calidad y condiciones internas del concreto.",
+        "extraccion-nucleos-desc":"La extracción de núcleos la utilizamos para obtener muestras del concreto en estructuras existentes y evaluar su resistencia y condiciones internas.<br><br><b>Procedimiento: </b> <br> Se perfora un núcleo del concreto utilizando una herramienta especial, y la muestra resultante se utiliza para realizar pruebas de resistencia a la compresión y analizar la calidad y condiciones internas del concreto.",
 
         "resumen-final":"Estas técnicas son parte integral del control de calidad del concreto y se seleccionan según los aspectos específicos que se desean evaluar en un proyecto. Las pruebas proporcionan información valiosa para garantizar que el concreto cumpla con los estándares requeridos y para prevenir posibles problemas a lo largo del tiempo."
     },
