--- a/languages/en.json
+++ b/languages/en.json
@@ -10,6 +10,7 @@
         "servicio2": "Material Quality Control",
         "servicio3": "Soil laboratory",
         "servicio4": "Drillings",
+        "servicio5": "Enviromental services",
         "proyectos": "Projects",
         "contacto": "Contact",
         "idioma": "Language"
@@ -32,6 +33,7 @@
         "servicio2": "Material Quality Control",
         "servicio3": "Soil laboratory",
         "servicio4": "Drilling",
+        "servicio5": "Enviromental services",
         "titulo-nosotros": "SOBRE NOSOTROS",
         "texto-nosotros": "Twenty years of experience and our project portfolio supports the quality of our work and the strategic value we generate for each of our clients' projects.",
         "titulo-proyectos": "OUR PROJECTS"
@@ -126,6 +128,12 @@
         "resumen": "Geonicsa has a dedicated drilling department for soil studies. We specialize in rock and soil drilling, equipped with portable equipment and rotary drilling machines complemented by their respective accessories.",
         "servicios-titulo": "The drilling services we offer include:",
         "servicios-lista": "<ul> <li> Deep drilling using rotary machines and bentonite muds.</li><li> Percussion drilling. </li> <li>Standard penetration test (SPT).</li> </ul>"
+    },
+    "estudios-ambientales":{
+        "titulo":"ENVIROMENTAL SERVICES",
+        "resumen":"Our environmental consulting professionals have an excellent disposition and skill in environmental issues, with experience gained through years of work and accumulated experience in the public and private sectors. Among our services are: ",
+        "lista":"<li> Elaboration of environmental studies.</li><li>Socio-environmental supervision of construction works.</li><li> Implementation of projects and studies in natural resource management.</li>",
+        "desc":"María Raquel Chavarría Sacasa, holds a Bachelor's degree in Biology and Natural Resources from the Central American University and has a Master's degree in Agricultural Sciences and Renewable Natural Resources, with a specialization in Production Systems with emphasis on Forestry and Agroforestry, from CATIE, Costa Rica.<br><br>She has 43 years of professional experience in the environmental, forestry, agroforestry, socio-economic diagnostics, formulation and evaluation of projects, watershed management plans, and farm management. And also in protected areas.<br><br> For the past 19 years, she has been working in environmental management conducting environmental impact studies.<br><br>She has also held project management positions, coordinated teams of consultants, and worked as a facilitator and trainer in workshops and training courses.<br><br> We work under the environmental legal framework of Nicaragua (General Law of the Environment and Natural Resources; Decree 20-2017, Environmental evaluation system for permits and authorizations for the sustainable use of natural resources, etc.) and the environmental safeguards of international banks."
     },
     "nosotros":{
         "titulo":"ABOUT US",
