--- a/languages/es.json
+++ b/languages/es.json
@@ -10,6 +10,7 @@
         "servicio2": "Control de calidad de materiales",
         "servicio3": "Laboratorio de suelos",
         "servicio4": "Perforación",
+        "servicio5": "Estudios ambientales",
         "proyectos": "Proyectos",
         "contacto": "Contacto",
         "idioma": "Idioma"
@@ -32,6 +33,7 @@
         "servicio2": "Control de calidad de materiales",
         "servicio3": "Laboratorio de suelos",
         "servicio4": "Perforación",
+        "servicio5": "Estudios ambientales",
         "titulo-nosotros": "SOBRE NOSOTROS",
         "texto-nosotros": "Veinte años de experiencia y nuestro portafolio de proyectos respalda la calidad de nuestro trabajo y el valor estratégico que generamos a cada proyecto de nuestros clientes.",
         "titulo-proyectos": "PROYECTOS"
@@ -49,6 +51,7 @@
         "pruebas-infiltracion": "Pruebas de infiltración",
         "pruebas-infiltracion-desc":"Las pruebas de infiltración nos permiten determinar la capacidad del suelo para manejar el agua, lo que puede ser fundamental en la planificación de proyectos de construcción, manejo de aguas pluviales y diseño de sistemas de drenaje. La información obtenida a partir de estas pruebas nos ayuda a realizar recomendaciones optimas sobre la gestión de recursos hídricos y la prevención de problemas como la erosión y las inundaciones."    
     },
+    
 
     "control-materiales": {
         "titulo": "CONTROL DE CALIDAD DE MATERIALES",
@@ -127,6 +130,12 @@
         "servicios-titulo": "Dentro de los servicios de perforación que ofrecemos se incluyen:",
         "servicios-lista": "<ul><li>Perforaciones profundas mediante máquina rotativa y con lodos bentoníticos. </li><li>Perforación por roto-percusión.</li><li>Ensayo de penetración estándar (SPT).</li></ul>"
     
+    },
+    "estudios-ambientales":{
+        "titulo":"ESTUDIOS AMBIENTALES",
+        "resumen":"Nuestros profesionales consultores en medio ambiente cuentan con una excelente disposición y habilidad en temas ambientales, con una experiencia lograda con años de trabajo y experiencia acumulada en el sector público y privado. Entre nuestros servicios se destacan:",
+        "lista":"<li>Elaboración de estudios ambientales.</li><li>Supervisión socioambiental de construcción de obras.</li><li> Realización de proyectos y estudios en manejo de recursos naturales.</li>",
+        "desc":"María Raquel Chavarría Sacasa, es Licenciada en Biología y Recursos Naturales, de la Universidad Centroamericana y tiene el grado de Maestro en Ciencias Agropecuarias y de los Recursos Naturales Renovables, con especialidad en Sistemas de Producción con énfasis en Silvicultura y Agroforestería, del CATIE, Costa Rica. <br><br> Tiene 43 años de ejercer su carrera y tiene experiencia profesional en el ámbito ambiental, forestal, agroforestal, diagnósticos socioeconómicos, formulación y evaluación de proyectos, planes de manejo de cuencas, de fincas. Y de áreas protegidas.<br><br> En los últimos 19 años ha estado trabajando en la gestión ambiental realizando estudios de impacto ambiental. <br><br>También ha ocupado cargos de dirección de proyectos, coordinación de equipos de consultores y trabajado como facilitadora y capacitadora en talleres y cursos de capacitación. <br><br>Conoce el marco legal ambiental de Nicaragua (Ley 217 Ley General del Medio Ambiente y los Recursos Naturales; Decreto 20-2017, Sistema de evaluación ambiental de permisos y autorizaciones para el uso sostenible de los recursos naturales, etc.) y las salvaguardas ambientales de los bancos internacionales."
     },
     "nosotros": {
         "titulo": "SOBRE NOSOTROS",
